Co-authored-by: atinmuaroh33 <atinmuaroh33@users.noreply.github.com> Co-authored-by: hisyamap <hisyamap@users.noreply.github.com>

--- a/angular.json
+++ b/angular.json
@@ -148,7 +148,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "be487a52-81db-41fa-9ada-2822d79b6751"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
