--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@capacitor-community/http": "^1.4.1",
+    "@capacitor/preferences": "^4.0.1",
+    "@ionic-native/network": "^5.36.0",
     "@ionic/angular": "^6.1.9",
+    "ionic-native": "^2.9.0",
     "ionicons": "^6.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
